# Trading212-Bot-App

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  README.md  dev.bat  dev.ps1  docker-compose.yml  stop.bat  stop.ps1  trading212_licensing+ws+desktop_7b214bd2.plan.md
.claude/: launch.json
Server-App/: README.md
backend/: .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  requirements.txt
deploy/: README.md  docker-compose.yml  env.backend.example  env.web.example
desktop/: SwiftTrade.manifest  SwiftTrade.spec  entry.py  pyproject.toml  requirements-dev.txt  requirements.txt  version_info.txt
desktop/app/: __version__.py  crypto_store.py  default_executor_url.py  license_checker.py  license_key_util.py  main.py  main_window.py  paper_live_toggle.py  paths.py  settings_store.py  sleep_guard.py  startup_manager.py  t212_client.py  ws_client.py
desktop/app/ui/: __init__.py  activity_panel.py  first_run_dialog.py  help_dialog.py  log_panel.py  nav_status.py  preferences_dialog.py  setup_checklist.py  setup_panel.py  setup_step_card.py  theme.py  trades_panel.py  welcome_banner.py  widgets.py
desktop/docs/: ANTIVIRUS.md
desktop/scripts/: build-windows.ps1  launch-dev.ps1
desktop/tests/: conftest.py  test_crypto_store.py  test_fake_signals.py
docs/: CLOUDFLARE_PAGES.md  DEPLOY.md  DEPLOY_STEP_BY_STEP.md  MVP_CHECKLIST.md  PROJECT_STRUCTURE.md
scripts/: stripe-webhooks.ps1  stripe-webhooks.sh  verify-supabase.mjs
shared/: signal_schema.py
supabase/: README.md
web/: .gitignore  Dockerfile  ENV.md  README.md  eslint.config.mjs  (+4 more)
(+304 files in other folders)
