[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "swifttrade-desktop"
version = "0.0.0"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
qt_api = "pyside6"
filterwarnings = [
    "ignore:.*swigvarlink.*:DeprecationWarning",
]
